--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h4 {
     text-align: center;
 }
 
-h3 {
+.color {
     text-align: center;
     border-radius: 40px;
     background-color: tomato;
@@ -67,4 +67,36 @@ h3 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.flexible {
+    display: flex;
+    text-align: center;
+}
+
+p {
+    text-align: center;
+}
+
+.bold {
+    background-color: tomato;
+    border-radius: 40px
+}
+
+.middle {
+    text-align: center;
+}
+
+.flex2 {
+    display: flex;
+    width: 30%;
+    text-align: center;
+}
+
+.red {
+    color: red;
+}
+
+.footer {
+    background-color: black;
 }
